Updated Succinct training materials